<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#0E6770">

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="73dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="@string/select_opening_players"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />


    <LinearLayout
        android:layout_width="421dp"
        android:layout_height="113dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.169">


        <TextView
            android:id="@+id/T3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/opening_bowler"
            android:textColor="#FDFBFB"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:autofillHints=""
            android:backgroundTint="#EDE7E7"
            android:hint="@string/bowler"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#FDFBFB"
            android:visibility="visible" />


    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:backgroundTint="#100F0F"
        android:backgroundTintMode="add"
        android:text="@string/ok"
        android:textColor="#FDFBFB"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.458"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.353" />

</androidx.constraintlayout.widget.ConstraintLayout>