<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".MainActivity">


    <Button
        android:id="@+id/add_match"
        android:layout_width="354dp"
        android:layout_height="106dp"
        android:layout_margin="20dp"
        android:background="@drawable/cust_button"
        android:backgroundTint="@color/purple_700"
        android:text="@string/add_match"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.339"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.36" />

    <Button
        android:id="@+id/match_history"
        android:layout_width="363dp"
        android:layout_height="101dp"
        android:layout_margin="20dp"
        android:background="@drawable/cust_button"
        android:backgroundTint="@color/purple_700"
        android:text="MATCH HISTORY"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.586" />

    <Button
        android:id="@+id/team_stats"
        android:layout_width="363dp"
        android:layout_height="101dp"
        android:layout_margin="10dp"
        android:background="@drawable/cust_button"
        android:backgroundTint="@color/purple_700"
        android:onClick="openTeamStats"
        android:text="@string/team_stats"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.541"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/match_history"
        app:layout_constraintVertical_bias="0.167" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_ngully_cricket"
        android:textColor="@color/black"
        android:textSize="40sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.137"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101" />


</androidx.constraintlayout.widget.ConstraintLayout>