<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:layout_marginStart="1dp"
        android:layout_marginBottom="700dp"
        android:background="@color/purple_700">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="35dp"
            android:layout_marginBottom="5dp"
            android:text="@string/players"
            android:textColor="@color/white"
            android:textSize="20sp" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="382dp"
        android:layout_height="179dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="464dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/img"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="168dp"
        android:layout_height="34dp"
        android:layout_marginEnd="120dp"
        android:layout_marginBottom="412dp"
        android:text="@string/player1"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fours"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginEnd="150dp"
        android:layout_marginBottom="272dp"
        android:text="@string/fours"
        android:textColor="@color/white"
        android:background="@color/purple_700"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/matches"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="272dp"
        android:text="Matches"
        android:background="@color/purple_700"
        android:textColor="@color/white"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/sixes"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginStart="288dp"
        android:layout_marginBottom="272dp"
        android:text="Sixes"
        android:background="@color/purple_700"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/runs"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginEnd="272dp"
        android:layout_marginBottom="150dp"
        android:text="Runs"
        android:background="@color/purple_700"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/fifties"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginEnd="148dp"
        android:layout_marginBottom="148dp"
        android:background="@color/purple_700"
        android:text="Fifties"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/hundreds"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginStart="288dp"
        android:layout_marginBottom="148dp"
        android:background="@color/purple_700"
        android:text="Hundreds"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/balls"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginStart="48dp"
        android:layout_marginBottom="28dp"
        android:background="@color/purple_700"
        android:text="Balls"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/wickets"
        android:layout_width="91dp"
        android:layout_height="91dp"
        android:layout_marginStart="172dp"
        android:layout_marginBottom="28dp"
        android:background="@color/purple_700"
        android:text="Wickets"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>