<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="#0E6770">

    <TextView
        android:id="@+id/textView"
        android:layout_width="414dp"
        android:layout_height="73dp"
        android:paddingStart="10dp"
        android:paddingTop="10dp"
        android:text="SELECT  OPENING  PLAYERS"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="415dp"
        android:layout_height="185dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.122">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/striker"
            android:textColor="#FDFBFB"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/striker"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:backgroundTint="#EDE7E7"
            android:hint="@string/striker"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#FDFBFB"
            android:visibility="visible"
            android:autofillHints=""
            android:inputType="text" />

        <TextView
            android:id="@+id/t2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/non_striker"
            android:textColor="#FDFBFB"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/non_striker"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:autofillHints=""
            android:backgroundTint="#EDE7E7"
            android:hint="Non-Striker"
            android:inputType="text"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#FDFBFB"
            android:visibility="visible" />


    </LinearLayout>


    <LinearLayout
        android:layout_width="411dp"
        android:layout_height="109dp"
        android:background="@color/black"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.438">


        <TextView
            android:id="@+id/T3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="OPENING BOWLER"
            android:textColor="#FDFBFB"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/opening_bowler"
            android:layout_width="209dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"

            android:backgroundTint="#EDE7E7"
            android:hint="Bowler"
            android:minHeight="48dp"
            android:singleLine="true"
            android:textColor="#FDFBFB"
            android:visibility="visible"
            android:autofillHints=""
            android:inputType="text" />


    </LinearLayout>

    <Button
        android:id="@+id/start_match"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#100F0F"
        android:backgroundTintMode="add"
        android:text="@string/start_match"
        android:textColor="#FDFBFB"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.435"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.603" />


</androidx.constraintlayout.widget.ConstraintLayout>